[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Assignments/EditAssignment.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Assignments/background_desert.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Assignments/MenuBG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Student_Mastery/BackHome.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 500
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background_desert" parent="." instance=ExtResource( 2 )]
position = Vector2( 372.782, 539.08 )
scale = Vector2( 1.00533, 1.00821 )

[node name="MenuBG" parent="." instance=ExtResource( 3 )]
position = Vector2( 291.777, 510.541 )

[node name="BackButton" parent="MenuBG" instance=ExtResource( 4 )]
margin_left = -345.197
margin_top = -566.635
margin_right = 367.803
margin_bottom = 140.365
rect_scale = Vector2( 0.12258, 0.12258 )

[node name="Label" type="Label" parent="MenuBG/BackButton"]
margin_left = 942.808
margin_top = 10.9669
margin_right = 4696.81
margin_bottom = 664.967
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Edit Assignment "

[node name="Label2" type="Label" parent="."]
margin_left = 56.0735
margin_top = 212.338
margin_right = 9848.07
margin_bottom = 1523.34
rect_scale = Vector2( 0.0527802, 0.0527802 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Please enter the question
 you wish to edit."
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 110.698
margin_top = 480.0
margin_right = 510.698
margin_bottom = 595.0

[node name="op1" type="LineEdit" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0

[node name="op2" type="LineEdit" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 400.0
margin_bottom = 52.0

[node name="op3" type="LineEdit" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 400.0
margin_bottom = 80.0

[node name="op4" type="LineEdit" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 400.0
margin_bottom = 108.0

[node name="numberSelect" type="LineEdit" parent="."]
margin_left = 197.999
margin_top = 291.0
margin_right = 431.999
margin_bottom = 333.0
align = 1
clear_button_enabled = true
placeholder_text = "Only Enter Numbers "

[node name="question" type="TextEdit" parent="."]
margin_left = 110.0
margin_top = 384.456
margin_right = 510.0
margin_bottom = 450.456

[node name="Asnwer" type="LineEdit" parent="."]
margin_left = 113.053
margin_top = 610.947
margin_right = 511.053
margin_bottom = 634.947

[node name="Notification" type="Label" parent="."]
margin_left = 113.432
margin_top = 353.728
margin_right = 9905.43
margin_bottom = 1223.73
rect_scale = Vector2( 0.0422374, 0.0422374 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="MenuBG/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="text_changed" from="numberSelect" to="." method="_on_numberSelect_text_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
